# ros2_testing_workshop_roscon_es_25

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug.md  config.yml  feature.md
.github/workflows/: ci.yml  ros-ci.yml  specific-ci.yml
docker/: .dockerignore  Dockerfile  README.md  apt_packages.txt  build.sh  fixuid_config.yml  join.sh  requirements.txt  ros_entrypoint.sh  ros_entrypoint_dev.sh  run.sh
modules/: CPPLINT.cfg
modules/module_1/: CMakeLists.txt  CPPLINT.cfg  README.md  package.xml
modules/module_1/doc/: README.md
modules/module_1/src/: bad_example.cpp
modules/module_2/: CMakeLists.txt  README.md  package.xml
modules/module_2/doc/: README.md
modules/module_2/include/module_2/: bad_laser_detector.hpp  laser_detector.hpp  laser_non_testable.hpp
modules/module_2/src/: bad_laser_detector.cpp  laser_detector.cpp
modules/module_2/test/: CMakeLists.txt  test_laser_detector.cpp
modules/module_3/: CMakeLists.txt  README.md  package.xml
modules/module_3/include/module_3/: laser_detector_node.hpp
modules/module_3/src/: laser_detector_node.cpp
modules/module_3/test/: CMakeLists.txt  test_interferer.cpp  test_laser_detector_node.cpp
modules/module_4/: CMakeLists.txt  README.md  package.xml
modules/module_4/include/module_4/: safety_light.hpp  safety_light_node.hpp
modules/module_4/src/: safety_light.cpp  safety_light_node.cpp
modules/module_4/test/: CMakeLists.txt  test_detection_launch.py
modules/module_5/: README.md
modules/module_6/: README.md
tools/: get_changed_packages.py  run_ci_build.sh
ws/src/modulo_1/: CMakeLists.txt  package.xml
ws/src/modulo_1/doc/: README.md
