<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modulo_1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jesus@todo.todo">jesus</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_lint_auto</build_depend>
  <exec_depend>ament_lint_auto</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- Configuración para correr los linters automáticamente -->
    <ament_lint_auto>
      <run>
        <linters>
          <ament_clang_format />
          <ament_cppcheck />
        </linters>
      </run>
    </ament_lint_auto>
  </export>
</package>
